--- a/style.less
+++ b/style.less
@@ -73,13 +73,13 @@ body {
 }
 
 @media (min-width: 1200px) {
-    .header {
-        width: auto;
+    .header {        
         display: flex;
         justify-content: space-between;
         align-items: center;
         padding: 0 120px;
         background-color: rgba(0,0,0,0.3);
+        width: auto;
     }
 
     .header_logo {
@@ -112,6 +112,7 @@ body {
     margin: 0 auto;
     background-color: @color-blue;
     color: #fff;
+    margin-bottom: 45px;
 }
 
 .download_image {
@@ -251,12 +252,19 @@ body {
     }
 }
 
-.advantages_header,
-.footer_text {
+.advantages {
+    width: 320px;
+    margin: 0 auto;
+}
+
+.advantages_header {
     font-size: 24px;
     font-weight: 200;
     color: @color-blue;
     text-align: center;
+    padding: 0 20px;
+    margin: 0;
+    padding-bottom: 30px;
 }
 
 .advantages_list {
@@ -265,10 +273,14 @@ body {
     padding: 0;
     background-color: #f2f2f2;
     text-align: center;
+
+    &+& {
+        padding-top: 40px;
+    }
 }
 
-.advantages_item {
-    padding: 0 20px;
+.advantages_item-information {
+    padding: 0 20px;    
 
     &:first-child {
         padding-top: 50px;
@@ -281,13 +293,97 @@ body {
 
 .advantages_item-header {
     font-weight: 700;
+    margin: 0;
+    padding: 0;
 }
 
 .advantages_item-text {
     font-size: 14px;
+    margin: 0;
+    padding: 0;
+    padding-top: 15px;
+}
+
+.advantages_item-images {
+    margin: 0 auto;
+    max-height: 280px;
+    max-width: 160px;
+    padding: 0 20px;
+    overflow: hidden;
+
+    &:last-child .advantages_item-image {
+        display: inline-block;
+        width: 100%;
+        height: auto;
+    }
+}
+
+.advantages_item-image {    
+    display: none;
+}
+
+.advantages_wrapper {
+    display: none;
+}
+
+@media (min-width: 660px) {    
+    .advantages {
+        width: 660px;
+        margin: 0 auto;
+    }
+
+    .advantages_header {
+        font-size: 40px;
+        line-height: 50px;
+        padding: 0 20px 0 20px;
+        width: 630px;
+
+        &+& {
+            padding-top: 0;
+            width: 320px;
+            margin: 0 auto;
+        }
+    }
+
+    .advantages_lists {
+        display: flex;
+        flex-direction: row-reverse;
+        padding-bottom: 60px;
+    }
+
+    .advantages_list {
+        &:first-child {
+            width: 320px;
+        }
+    }
+
+    .advantages_item-images {
+        max-width: 270px;
+        max-height: 485px;
+    }
+
+    .advantages_item-information {
+        text-align: left;
+    }
+
+    .advantages_wrapper {
+        display: flex;
+        justify-content: space-between;
+        padding: 0 20px;
+    }
+
+    .advantages_item {
+        width: 320px;
+    }
+}
+
+@media (min-width: 1200px) {
+
 }
 
 .reviews {
+    width: 320px;
+    margin: 0 auto;
     padding-top: 50px;
 }
 
@@ -317,6 +413,8 @@ body {
 }
 
 .price {
+    width: 320px;
+    margin: 0 auto;
     background-color: #f2f2f2;
 }
 
@@ -335,19 +433,54 @@ body {
     font-size: 14px;
 }
 
+.footer {
+    width: 320px;
+    margin: 0 auto;
+}
+
+.footer_text {
+    font-size: 24px;
+    font-weight: 200;
+    color: @color-blue;
+    text-align: center;
+    padding: 0 20px;
+}
+
 .footer_list {
     list-style: none;
+    margin: 0;
+    padding: 0 20px;
     text-align: center;
+    padding-bottom: 40px;
+}
+
+.footer_information-item {
+    &+& {
+        padding-top: 25px;
+    }
 }
 
 .footer_item-text {
     font-size: 18px;
     color: @color-blue;
     font-weight: 700;
+    margin: 0;
 }
 
 .footer_item-info {
     font-size: 24px;
     font-weight: 200;
     color: #d22856;
+    margin: 0;
+}
+
+.footer_map {
+    height: 205px;
+    overflow: hidden;
+    position: relative;
+}
+
+.footer_map-image {
+    position: absolute;
+    bottom: 0;
 }
