--- a/style.less
+++ b/style.less
@@ -1,4 +1,5 @@
-@color-blue: #1d2631;
+@color-blue: #283645;
+@color-pink: #d22856;
 
 body {
     font-family: 'Open Sans', sans-serif;
@@ -20,7 +21,7 @@ body {
     width: 100%;
     position: relative;
     padding: 0 20px;
-/*
+    /*
     &::after {
         content: "";
         border-bottom: 13px double #fff;
@@ -68,18 +69,27 @@ body {
     }
 
     .header_logo {
-        height: 110px;        
+        height: 110px;
     }
 }
 
 @media (min-width: 1200px) {
-    .header {        
+    .header {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding: 0 120px;
-        background-color: rgba(0,0,0,0.3);
-        width: auto;
+        position: absolute;
+        z-index: 2;
+        background-color: rgba(0, 0, 0, 0.3);
+        width: 100%;
+    }
+
+    .header_information {
+        width: 960px;
+        margin: 0 auto;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
     }
 
     .header_logo {
@@ -158,18 +168,7 @@ body {
 
 .download_link-item {
 
-    &:hover,
-    &:focus {
-        opacity: 0.5;
-        outline: none;
-    }
-
-    &:active {
-        opacity: 0.2;
-        outline: none;
-    }
-    
-    & + & {
+    &+& {
         margin-left: 35px;
     }
 }
@@ -190,9 +189,9 @@ body {
 
     .download_image {
         height: 620px;
-        background-image: 
-        url("https://user-images.githubusercontent.com/51093088/68393063-2fef3600-017c-11ea-94c0-9a2895c838da.png"),
-        url("https://user-images.githubusercontent.com/51093088/68392919-e56db980-017b-11ea-85d2-4dfeb9590143.png");
+        background-image:
+            url("https://user-images.githubusercontent.com/51093088/68393063-2fef3600-017c-11ea-94c0-9a2895c838da.png"),
+            url("https://user-images.githubusercontent.com/51093088/68392919-e56db980-017b-11ea-85d2-4dfeb9590143.png");
         background-repeat: no-repeat;
         background-position: center bottom, center center;
     }
@@ -231,24 +230,37 @@ body {
         width: auto;
         height: 855px;
         padding: 0 120px;
-        background-image: 
-        url("https://user-images.githubusercontent.com/51093088/68402731-d7746480-018c-11ea-821a-4ebc65e99785.jpg");
+        background-image:
+            url("https://user-images.githubusercontent.com/51093088/68402731-d7746480-018c-11ea-821a-4ebc65e99785.jpg");
         background-repeat: no-repeat;
         background-size: 100% 100%;
     }
 
+    .download_wrapper {
+        width: 960px;
+        margin: 0 auto;
+    }
+
     .download_image {
-        width: auto;
+        width: 960px;
         height: 855px;
-        background-image: url("https://user-images.githubusercontent.com/51093088/68402841-038fe580-018d-11ea-8fa1-408431b69f43.png");
+        background-image: url(https://user-images.githubusercontent.com/51093088/68402841-038fe580-018d-11ea-8fa1-408431b69f43.png);
         background-size: auto;
-        background-position: right bottom;
+        background-position: 0% 100%;
     }
 
     .download_header {
         font-size: 50px;
         width: 255px;
         line-height: 60px;
+    }
+
+    .download_information {
+        padding: 0;
+    }
+
+    .download_button {
+        margin: 0 auto;
     }
 }
 
@@ -283,7 +295,7 @@ body {
 }
 
 .advantages_item-information {
-    padding: 0 20px;    
+    padding: 0 20px;
 
     &:first-child {
         padding-top: 50px;
@@ -321,7 +333,7 @@ body {
     }
 }
 
-.advantages_item-image {    
+.advantages_item-image {
     display: none;
 }
 
@@ -329,7 +341,7 @@ body {
     display: none;
 }
 
-@media (min-width: 660px) {    
+@media (min-width: 660px) {
     .advantages {
         width: 660px;
         margin: 0 auto;
@@ -361,13 +373,17 @@ body {
         }
     }
 
+    .advantages_item-information {
+        text-align: left;
+    }
+
+    .advantages_item-text {
+        line-height: 24px;
+    }
+
     .advantages_item-images {
         max-width: 270px;
         max-height: 485px;
-    }
-
-    .advantages_item-information {
-        text-align: left;
     }
 
     .advantages_wrapper {
@@ -379,10 +395,6 @@ body {
 
     .advantages_item {
         width: 320px;
-    }
-
-    .advantages_item-text {
-        line-height: 24px;
     }
 
     .advantages_second-header {
@@ -400,7 +412,7 @@ body {
 
     .advantages_link {
         font-size: 14px;
-        color: #d22856;
+        color: @color-pink;
     }
 }
 
@@ -408,8 +420,12 @@ body {
 
     .advantages {
         width: auto;
-        padding: 0 120px;
         margin: 0 auto;
+        background-color: #f2f2f2;
+    }
+
+    .advantages_headers {
+        background-color: #fff;
     }
 
     .advantages_header {
@@ -420,10 +436,10 @@ body {
         display: flex;
         flex-direction: column-reverse;
         justify-content: space-between;
-        width: auto;
+        margin: 0;
         padding: 0 120px;
+        width: 960px;
         margin: 0 auto;
-        background-color: #f2f2f2;
     }
 
     .advantages_list {
@@ -461,8 +477,7 @@ body {
     }
 
     .advantages_wrapper {
-        width: auto;
-        padding: 0 120px;
+        width: 960px;
         margin: 0 auto;
         background-color: #f2f2f2;
         padding-top: 70px;
@@ -478,8 +493,8 @@ body {
     }
 
     .advantages_second-header {
-        font-size: 30px; 
-        width: auto;       
+        font-size: 30px;
+        width: auto;
     }
 
     .advantages_second-text {
@@ -501,21 +516,58 @@ body {
     padding-top: 50px;
 }
 
-.reviews_list {
+.reviews-list {
+    width: 100%;
+    overflow: hidden;
+    position: relative;
+    padding-bottom: 120px;
+}
+
+.reviews-information {
     list-style: none;
-    padding: 0;
     margin: 0;
+    padding: 0;
+    display: block;
+
+    position: relative;
+    left: 0;
+    top: 0;
+    width: 300%;
+    transition: left .5s ease-out;
+}
+
+.reviews-information_item {
+    display: block;
+    float: left;
+
+    position: relative;
+    width: 33%;
+    height: 100%;
     text-align: center;
 }
 
-.reviews_item {
-    padding: 0 20px;
+#reviews-list-1:checked~.reviews-information {
+    left: 0;
+}
+
+#reviews-list-2:checked~.reviews-information {
+    left: -100%;
+}
+
+#reviews-list-3:checked~.reviews-information {
+    left: -200%;
 }
 
 .reviews_item-name {
     font-weight: 700;
     font-size: 18px;
     margin: 0;
+}
+
+.reviews_item-information {
+    display: none;
+    margin: 0;
+    color: @color-blue;
 }
 
 .reviews_item-text {
@@ -526,25 +578,148 @@ body {
     padding-top: 25px;
 }
 
+@media (min-width: 660px) {
+    .reviews {
+        width: 620px;
+    }
+    
+    .reviews_item-information {
+        display: block;
+        font-size: 14px;
+    }
+
+    .reviews-information_item {
+        display: flex;
+        flex-direction: column-reverse;
+    }
+
+    .reviews_item-name {
+        padding-top: 40px;
+        font-size: 20px;
+    }
+
+    .reviews_item-text {
+        font-size: 18px;
+        line-height: 30px;
+    }
+
+
+}
+
+@media (min-width: 1200px) {
+    .reviews {
+        width: 960px;
+        margin: 0 auto;
+    }
+}
+
 .price {
     width: 320px;
+    overflow: hidden;
     margin: 0 auto;
     background-color: #f2f2f2;
 }
 
+.price_table {
+    width: 280%;
+    padding-top: 90px;
+    padding-bottom: 100px;
+    position: relative;
+    left: -90%;
+    top: 0;
+    transition: left .5s ease-out;
+}
+
 .price_table-header {
+    padding: 20px;
+
     font-size: 18px;
     font: inherit;
     font-weight: 700;
+    text-transform: uppercase;
 
     background-color: @color-blue;
     color: #fff;
+}
+
+.price_header-price {
+    margin: 0;
+    font-weight: 200;
+    font-size: 24px;
 }
 
 .price_table-data {
     background-color: #fff;
     color: @color-blue;
     font-size: 14px;
+    text-transform: uppercase;
+    padding: 25px;
+}
+
+.price_table-header-hidden,
+.table-data-hidden {
+    display: none;
+}
+
+
+#econom:checked~.price_table {
+    left: 0%;
+}
+
+#standart:checked~.price_table {
+    left: -90%;
+}
+
+#plus:checked~.price_table {
+    left: -180%;
+}
+
+@media (min-width: 660px) {
+    .price {
+        width: 620px;
+    }
+
+    .price_table {
+        width: 620px;
+    }
+    
+    #standart:checked~.price_table {
+        left: 0;
+    }
+    
+    #plus:checked~.price_table {
+        left: 0;
+    }
+    .price_radio {
+        display: none;
+    }
+
+    .price_table-header-hidden,
+    .table-data-hidden {
+        display: block;
+    }
+
+    .price_table-data {
+        padding: 15px 0 10px 15px;
+        text-transform: none;
+        
+    }
+
+    .price_table-header {
+        padding: 15px 0;
+    }
+
+}
+
+@media (min-width: 1200px) {
+    .price {
+        width: auto;
+    }
+
+    .price_table {
+        width: 940px;
+        margin: 0 auto;
+    }
 }
 
 .footer {
@@ -558,6 +733,8 @@ body {
     color: @color-blue;
     text-align: center;
     padding: 0 20px;
+    margin: 0;
+    padding-top: 50px;
 }
 
 .footer_list {
@@ -566,6 +743,7 @@ body {
     padding: 0 20px;
     text-align: center;
     padding-bottom: 40px;
+    padding-top: 40px;
 }
 
 .footer_information-item {
@@ -584,7 +762,7 @@ body {
 .footer_item-info {
     font-size: 24px;
     font-weight: 200;
-    color: #d22856;
+    color: @color-pink;
     margin: 0;
 }
 
@@ -597,4 +775,146 @@ body {
 .footer_map-image {
     position: absolute;
     bottom: 0;
+    left: -450px;
+    top: -400px;
+}
+
+.footer_social {
+    display: none;
+}
+
+@media (min-width: 660px) {
+    .footer {
+        width: 620px;
+    }
+
+    .footer_text {
+        width: 370px;
+        font-size: 40px;
+        line-height: 50px;
+        margin: 0 auto;
+    }
+
+    .footer_list {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        align-content: center;
+        flex-wrap: wrap;
+        width: 620px;
+        padding: 45px 0;
+    }
+
+    .footer_information-item {
+        width: 300px;
+
+        &+& {
+            padding-top: 0;
+        }
+
+        &:last-child {
+            flex-grow: 1;
+            padding-top: 50px;
+        }
+    }
+
+    .footer_map {
+        height: 375px;
+    }
+
+    .footer_map-image {
+        position: absolute;
+        bottom: 0;
+        left: -300px;
+        top: -350px;
+    }
+
+    .footer_social {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 35px 20px;
+    }
+
+    .footer_social-list {
+        height: 50px;
+    }
+
+    .footer_social-item {
+        width: 50px;
+        height: 50px;
+        display: inline-block;
+        border: 2px solid #e9ebec;
+        border-radius: 50%;
+        position: relative;
+
+        & + & {
+            margin-left: 10px;
+        }
+    }
+
+    .footer_social-image {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translateX(-50%) translateY(-50%);
+    }
+
+    .footer_social-text {
+        display: flex;
+        align-items: center;
+    }
+
+    .social-text {
+        font-size: 14px;
+        color: @color-blue;
+        line-height: 18px;
+    }
+
+    .social-link {
+        margin-left: 15px;
+    }
+
+    .social-link_image {
+        vertical-align: middle;
+    }
+}
+
+@media (min-width: 1200px) {
+    .footer {
+        width: 960px;
+    }
+
+    .footer_information-item {
+        width: auto;
+    }
+
+    .footer_list {
+        width: 940px;
+        padding: 0 10px;
+        padding-bottom: 15px;
+        padding-top: 65px;
+    }
+
+    .footer_information-item {
+        &:last-child {
+            width: 220px;
+            padding-top: 0;
+            flex-grow: 0;
+        }
+    }
+
+    .footer_map {
+        height: 500px;
+    }
+
+    .footer_map-image {
+        left: -100px;
+        top: -250px;
+    }
+
+    .footer_social {
+        padding: 35px 10px;
+    }
+    
 }
