--- a/style.less
+++ b/style.less
@@ -43,6 +43,7 @@ body {
 
 .header_logo {
     display: block;
+    width: 100px;
     height: 70px;
     padding: 0 20px;
     position: relative;
@@ -58,29 +59,21 @@ body {
     position: absolute;
     right: 20px;
     top: 50%;
-    background-color: transparent;
     transform: translateY(-50%);
+    width: 25px;
+    height: 25px;
     border: none;
+    background-color: transparent;
+    cursor: pointer;
 
     &::before,
     &::after {
         content: "";
-        display: block;
-        padding: 0;
-        width: 26px;
+
         height: 2px;
+        width: 20px;
         background-color: #fff;
     }
-
-    &::before {
-        transform: rotate(45deg);
-    }
-
-    &::after {
-        transform: rotate(-45deg);
-    }
-
-
 }
 
 .header_navigation {
@@ -128,6 +121,10 @@ body {
         width: 100%;
     }
 
+    .main-nav-open {
+        display: flex;
+    }
+
     .header_information {
         width: 960px;
         margin: 0 auto;
@@ -138,6 +135,10 @@ body {
 
     .header_logo {
         width: 160px;
+    }
+
+    .header_toggle {
+        display: none;
     }
 
     .header_navigation {
